refactor: package structure

--- a/notebooks/GridWorld Statistical Testing.ipynb
+++ b/notebooks/GridWorld Statistical Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "id": "2accbaec-351e-46e4-9b38-b92ba5a29f71",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,13 @@
     "import os, sys, math\n",
     "sys.path.insert(0, '..')\n",
     "\n",
-    "from src import *\n",
+    "from src import teddr\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import smplotlib\n",
-    "from scipy import stats"
+    "import scipy"
    ]
   },
   {
@@ -75,7 +75,7 @@
     "    Ks = []\n",
     "    for _ in range(10):\n",
     "        try:\n",
-    "            world = gridworld.GridWorld(\n",
+    "            world = teddr.gridworld.GridWorld(\n",
     "                grid_size=(1000000, 1000000),\n",
     "                n_locations=n_locations,\n",
     "                n_locales = n_locales\n",
@@ -85,7 +85,7 @@
     "                destination_prob_method=\"inverse_distance\"\n",
     "            )\n",
     "        except:\n",
-    "            world = gridworld.GridWorld(\n",
+    "            world = teddr.gridworld.GridWorld(\n",
     "                grid_size=(1000000, 1000000),\n",
     "                n_locations=n_locations,\n",
     "                n_locales = n_locales\n",
@@ -106,7 +106,7 @@
     "            n_samples=n_events, \n",
     "            cdf_uncertainty=\"gaussian\"\n",
     "        )\n",
-    "        MMD = stats.mmd(samples1, actual_distances, False)\n",
+    "        MMD = teddr.stats.mmd(samples1, actual_distances, False)\n",
     "        MMDs.append(MMD)\n",
     "        \n",
     "    K_means.append(np.mean(Ks))\n",
@@ -193,18 +193,6 @@
     "     fontweight='bold'\n",
     ")\n",
     "\n",
-    "# sns.kdeplot(tedder_samples, label=\"Estimate\", ax=ax[2], clip=(0, 1.5*10**6))\n",
-    "# sns.kdeplot(actual_distances, label=\"Actual\", ax=ax[2], clip=(0, 1.5*10**6))\n",
-    "# ax[2].set_xlabel(\"Travel Distance\")\n",
-    "# ax[2].legend()\n",
-    "# ax[2].legend(loc=\"upper center\")\n",
-    "# ax[2].text(0.95, 0.95, 'C)', \n",
-    "#      transform=ax[2].transAxes, \n",
-    "#      verticalalignment='top', \n",
-    "#      horizontalalignment='right', \n",
-    "#      fontweight='bold'\n",
-    "# )\n",
-    "\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"simresults_compact.png\")\n",
     "plt.show()"
@@ -224,35 +212,7 @@
    "id": "229a9833-7af4-4825-9628-38b58bc05aa7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def pct_less(vals, ref):\n",
-    "    return sum(v < ref for v in vals) / len(vals)\n",
-    "\n",
-    "def holm_bonferroni(p_values, alpha=0.05):\n",
-    "    \"\"\"Apply the Holm-Bonferroni method to adjust p-values for multiple comparisons.\"\"\"\n",
-    "    sorted_p_values = sorted((p, i) for i, p in enumerate(p_values))\n",
-    "    m = len(p_values)\n",
-    "    adjusted_alpha = [alpha / (m - i) for i in range(m)]\n",
-    "    significant = [False] * m\n",
-    "    \n",
-    "    for (p_value, original_index), alpha in zip(sorted_p_values, adjusted_alpha):\n",
-    "        if p_value <= alpha:\n",
-    "            significant[original_index] = True\n",
-    "        else:\n",
-    "            break\n",
-    "    return significant.count(True)\n",
-    "\n",
-    "def holm_bonferroni_dict(p_values, alpha=0.05):\n",
-    "    sorted_p_values = sorted((p, i) for i, p in enumerate(p_values))\n",
-    "    m = len(p_values)\n",
-    "    adjusted_p_values = {p: min(alpha / (m - i), 1) for i, (p, _) in enumerate(sorted_p_values)}\n",
-    "    adjusted_p_values_dict = {}\n",
-    "    \n",
-    "    for original_p_value, original_index in sorted_p_values:\n",
-    "        adjusted_p_values_dict[original_p_value] = adjusted_p_values[original_p_value]\n",
-    "    \n",
-    "    return adjusted_p_values_dict"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -281,7 +241,7 @@
     "    p_values = []\n",
     "    for _ in range(1000):\n",
     "        try:\n",
-    "            world = gridworld.GridWorld(\n",
+    "            world = teddr.gridworld.GridWorld(\n",
     "                grid_size=(1000000, 1000000),\n",
     "                n_locations=n_locations,\n",
     "                n_locales = n_locales\n",
@@ -291,7 +251,7 @@
     "                destination_prob_method=\"inverse_distance\"\n",
     "            )\n",
     "        except:\n",
-    "            world = gridworld.GridWorld(\n",
+    "            world = teddr.gridworld.GridWorld(\n",
     "                grid_size=(1000000, 1000000),\n",
     "                n_locations=n_locations,\n",
     "                n_locales = n_locales\n",
@@ -312,14 +272,14 @@
     "    pctiles = [0.1*k for k in range(1, 11)]\n",
     "    y_values = []\n",
     "    for x in pctiles:\n",
-    "        y_values.append(pct_less(p_values, x))\n",
-    "    y_values = [pct_less(p_values, x) for x in pctiles]\n",
+    "        y_values.append(teddr.stats.pct_less(p_values, x))\n",
+    "    y_values = [teddr.stats.pct_less(p_values, x) for x in pctiles]\n",
     "\n",
     "    #---uniformity of p-values---\n",
     "    num_bins = 20 # each incremental 5% level\n",
     "    expected_counts = np.ones(num_bins) * len(p_values) / num_bins\n",
     "    observed_counts, _ = np.histogram(p_values, bins=np.linspace(0, 1, num_bins + 1))\n",
-    "    chi_square, p_value = stats.chisquare(f_obs=observed_counts, f_exp=expected_counts)\n",
+    "    chi_square, p_value = scipy.stats.chisquare(f_obs=observed_counts, f_exp=expected_counts)\n",
     "    uniform_pvals.append(p_value)\n",
     "    uniform_chis.append(chi_square)\n",
     "\n",
@@ -355,7 +315,7 @@
     }
    ],
    "source": [
-    "holm_bonferroni(uniform_pvals)"
+    "teddr.stats.holm_bonferroni(uniform_pvals)"
    ]
   },
   {
