--- a/notebooks/Partial Reanalysis of Maheswaran et al..ipynb
+++ b/notebooks/Partial Reanalysis of Maheswaran et al..ipynb
@@ -18,7 +18,7 @@
     "import smplotlib\n",
     "import statsmodels.api as sm\n",
     "\n",
-    "from src import *"
+    "from src import teddr"
    ]
   },
   {
@@ -113,38 +113,10 @@
     "axes.set_yscale(\"log\")\n",
     "axes.set_xlabel(\"Distance from Screening Center (km)\")\n",
     "axes.legend(loc=\"lower left\")\n",
-    "# axes[0].text(0.95, 0.95, 'A)', \n",
-    "#      transform=axes[0].transAxes, \n",
-    "#      verticalalignment='top', \n",
-    "#      horizontalalignment='right', \n",
-    "#      fontweight='bold',\n",
-    "#      fontsize=22\n",
-    "# )\n",
-    "\n",
-    "# distances = np.concatenate([s1, s2])\n",
-    "# outcomes = np.concatenate([np.zeros(len(s1)), np.ones(len(s2))]) # 1 for attended, 0 for invited\n",
-    "\n",
-    "# distances_sm = sm.add_constant(distances)  # adding a constant for the intercept\n",
-    "# logit_model = sm.Logit(outcomes, distances_sm).fit(disp=0)  # fit the model quietly\n",
-    "\n",
-    "# distances_grid = np.linspace(0, 100, 300)\n",
-    "# distances_grid_sm = sm.add_constant(distances_grid)\n",
-    "# predicted_probs = logit_model.predict(distances_grid_sm)\n",
-    "\n",
-    "# axes[1].plot(distances_grid, predicted_probs, color='red')\n",
-    "# axes[1].set_xlabel(\"Distance from Screening Center (km)\")\n",
-    "# axes[1].set_ylabel('Predicted Probability of Attendance')\n",
-    "# axes[1].text(0.95, 0.95, 'B)', \n",
-    "#      transform=axes[1].transAxes, \n",
-    "#      verticalalignment='top', \n",
-    "#      horizontalalignment='right', \n",
-    "#      fontweight='bold',\n",
-    "#      fontsize=22\n",
-    "# )\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"reanalysis_compact.png\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -154,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p, ci, odds = probability.calculate_odds_ratio(s1, s2, with_ci=True, return_pvalue=True)\n",
+    "p, ci, odds = teddr.stats.calculate_odds_ratio(s1, s2, with_ci=True, return_pvalue=True)\n",
     "print(p, ci, odds)"
    ]
   },
